# website

./: .env.example  .env.production  .env.production.template  .gcloudignore  .gitignore  .npmrc  AGENTS.md  CLAUDE.local.md  CLAUDE.md  CLAUDE_CODE_FIGMA_MCP_SOLUTION.md  CLAUDE_new.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  ENVIRONMENT_SETUP.md  FIGMA_MCP_403_COMPREHENSIVE_SOLUTION.md  FIGMA_MCP_403_SOLUTION.md  FIGMA_MCP_CONFIGURED.md  FIGMA_MCP_FINAL_RESULT.md  FIGMA_MCP_MANUAL_FIX.md  FIGMA_MCP_SETUP.md  FIGMA_MCP_SOLUTION.md  FIGMA_MCP_SUCCESS.md  FIGMA_MCP_TROUBLESHOOTING.md  FIGMA_TOKEN.txt  FIGMA_TOKEN_CC_MCP.txt  FIGMA_TOKEN_SOLUTION.md  GCP_MANUAL_SETUP_URGENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS_REPORT.md  README.deployment.md  README.md  ai_studio_code (5).html  analyzing_theory.docx  api_test_report.json  backend_page.html  buttons_page.json  cloudbuild.yaml  create_secret_key.py  (+53 more)
vulca-pkg/: LICENSE  README.md  pyproject.toml
vulca-pkg/src/vulca/: __main__.py  _image.py  _intent.py  _parse.py  cli.py  create.py  cultural.py  session.py
vulca-pkg/tests/: test_cli.py  test_evaluate.py  test_package.py
wenxin-backend/: .env.example  .gcloudignore  .gitignore  Dockerfile  Dockerfile.cloud  Dockerfile.dev  Dockerfile.import  Dockerfile.init  Dockerfile.render  MANIFEST.in  OPENAI_BENCHMARK_SUMMARY.md  OPTIMIZATION_SUCCESS_REPORT.md  PRODUCTION_INIT.md  README.md  UNIFIED_MODEL_INTERFACE.md  add_metrics_columns.py  add_test_users.py  alembic.ini  analyze_all_providers.py  api_import_models.py  api_response.json  benchmark_by_provider.py  benchmark_test_cases.json  check_all_data.py  check_latest_claude_models.py  check_model_status.py  check_models.py  check_openai_models.py  check_results.py  clean_mock_models.py  clean_production_db.py  cleanup_and_restructure.py  cleanup_old_files.py  cloud_shell_import.md  cloud_shell_upload.sh  cloudbuild-import.yaml  cloudbuild.yaml  collect_responses.py  collection_checkpoint.json  consolidate_all_results.py  (+122 more)
wenxin-backend/alembic/: env.py
wenxin-backend/alembic/versions/: 0523013558b1_merge_all_migrations.py  12aa0300721d_add_individual_score_columns_and_.py  3703a6d60754_add_missing_model_fields.py  99eda9c2e949_initial_migration.py  (+7 more)
wenxin-backend/app/: __init__.py  main.py
wenxin-backend/benchmark/: README.md
wenxin-backend/collected_responses/: all_responses.json  gpt-4-turbo_responses.json  gpt-4.5_responses.json  gpt-4_responses.json  gpt-4o-mini_responses.json  gpt-4o_responses.json  gpt-5-mini_responses.json  gpt-5-nano_responses.json  gpt-5_responses.json  o1-mini_responses.json  o1_responses.json  o3-mini_responses.json
wenxin-backend/config/: vulca_weights.yaml
wenxin-backend/marketing/: restore-demo-data.sh  session_ids.txt
wenxin-backend/scoring_results/: all_scored_results.json  gpt-4-turbo_scored.json  gpt-4.5_scored.json  gpt-4_scored.json  gpt-4o-mini_scored.json  gpt-4o_scored.json  gpt-5-mini_scored.json  gpt-5-nano_scored.json  gpt-5_scored.json  o1-mini_scored.json  o1_scored.json  o3-mini_scored.json  ranking_report.md
wenxin-backend/scripts/: build_frontend.sh  publish.sh
wenxin-backend/tests/: test_api_integration.py  test_community_agents.py  test_concept_crystallizer.py  test_critic_dynamic_keywords.py  test_cultural_clusterer.py  test_cultural_router.py  test_digestion_e2e.py  test_digestion_loop.py  test_draft_dynamic_style.py  test_health.py  test_hitl_integration.py  test_image_scorer_dynamic.py  test_layer_aware_refinement.py  test_media_types.py  test_nb2_real_e2e.py  test_performance.py  test_port_contract.py  test_preference_learner_implicit.py  test_prompt_distiller.py  test_prototype_api.py  test_scout_dynamic.py  test_session_cultural_features.py  test_skill_selector_dynamic.py  test_skills_api.py  test_sub_stage_executor.py  test_tradition_classifier.py  test_video_handlers.py  test_vlm_critic_archetypes.py  test_vulca_core_algorithm.py  test_vulca_integration.py  test_vulca_migration.py
wenxin-backend/vulca/: __init__.py  _engine.py  _skills.py  _vlm.py  cli.py  evaluate.py  types.py
(+1243 files in other folders)
