[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulca"
version = "0.2.0"
description = "Cultural-aware AI art evaluation — local app & SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Yu Haorui", email = "yuhaorui48@gmail.com"},
]
keywords = ["art", "evaluation", "cultural", "ai", "vlm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "litellm>=1.0",
    "httpx>=0.25",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
app = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.14",
    "aiosqlite>=0.19",
    "alembic>=1.16",
    "bcrypt==4.0.1",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.5",
    "python-multipart>=0.0.20",
    "openai>=2.18",
    "anthropic>=0.75",
    "google-generativeai>=0.5",
    "google-genai>=1.21",
    "litellm>=1.72",
    "numpy>=2.1",
    "pandas>=2.3",
    "Pillow>=11.0",
    "gunicorn>=21.2",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
    "email-validator>=2.2",
    "httpx>=0.28",
    "aiosmtplib>=3.0",
    "pydantic-settings>=2.10",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "httpx",
]

[project.urls]
Homepage = "https://vulcaart.art"
Documentation = "https://vulcaart.art/#/docs"
Repository = "https://github.com/yha9806/website"

[project.scripts]
vulca = "vulca.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app", "vulca"]

[tool.hatch.build]
include = ["app/**", "vulca/**", "frontend/dist/**", "init_db.py", "seed_prototype.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["slow: marks tests as slow"]

[tool.coverage.run]
source = ["app"]
omit = ["app/exhibition/*", "*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 15
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__"]
